# libpino

./: .clang-format  .devcontainer.json  .gitmodules  32bit_tryout.sh  CMakeLists.txt  Dockerfile  LICENSE  README.md  README_ja.md  be_tryout.sh  ci.sh  container_ci.sh  format.py
.github/: renovate.json
.github/workflows/: ci.yaml  coverage.yaml  release.yaml
cmake/: buildtime.cmake  emscripten.cmake  test.cmake
include/: pino.h
include/pino/: endianness.h  handler.h  portable.h
src/: endianness.c  handler.c  memory.c  pino.c  pino_internal.h  portable.c
src/internal/: bswap.h  common.h  simd.h
tests/: handler_spl1.h  handler_u32a.h  test_basic.c  test_endianness.c  test_invalid.c  test_simd.c  test_uaf.c  util.h
